HEAD
	+ Manage correctly internal errors in data table controller
4.0.3
	+ More robust management of administration user accounts
	+ Fix not defined domain in log's ConfigureLogs model
	+ When unsubscribing remove extra packages before saving changes
	+ Better check of versions numbers in backup restore
	+ Make EBox::MyDBEngine more reusable
	+ Modify webadmin service when upgrading from 3.2
	+ Show enable errors in module status table
4.0.2
	+ Remove incorrect directory not exists warnings
	+ Crash reports can be submitted also with global debug disabled
4.0.1
	+ Save changes does redirection after 10 consecutive failed requests
	+ Hide useless revoke button in OpenChange vdomains table
4.0
	+ sudoers-friendly take user to whatever module which implenents extraSudoerUsers
	+ Implement data in use in JS for forms
	+ Fixed ManageAdmins model and offer it in all editions
	+ Pass row argument to editable function handler
	+ Enable automatic updates on commercial servers by default
	+ Remove excessive top margin for first child fields in forms
	+ Better warning in change hostname confirmation dialog
	+ Confirmation dialog action recovers correctly from errors
	+ Make webadmin certificate modifiable via CA module
	+ Better control of error in local backup confirmation dialog
	+ Fixed i18n bug in progress dialog
	+ Updated remoteservices dependencies
	+ Rename Import/Export Configuration to Configuration Backup
	+ Removed subscription from community editions
	+ Remote services now resides on this package
	+ Reload after save changes when urls have hash part
	+ Default webadmin port is now 8443
	+ Remove haproxy which is no longer needed for Outlook Anywhere
	+ UI is now responsive to different resolutions
	+ New System -> Date/Time menu which also includes NTP when available
	+ New header style
	+ Search box moved from menu to header
	+ Menu reorganization and re-style
	+ Added search for configuration data
	+ Improved installation wizards
	+ Set version to 4.0