@@ -1,4 +1,5 @@
 HEAD
+	+ Added subscription migration when upgrading from 3.2
 	+ Manage correctly internal errors in data table controller
 4.0.3
 	+ More robust management of administration user accounts
